--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a href="#">DOWNLOAD CV</a>
         </div>
         <div class="hero_button">
-          <a href="#">SOURCE CODE</a>
+          <a href="https://github.com/price220903/Portofolio-Website">SOURCE CODE</a>
         </div>
       </div>
     </section>
